<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coffee App</string>
    <string name="error_nodata">Empty Database</string>
    <string name="save_hint_enter_name">enter name</string>
    <string name="personal_number_hint">enter your personal number</string>
    <string name="title_activity_main">CoffeeApp</string>
    <string name="action_settings">Settings</string>
    <string name="manual_selection">You have no RFID tag. Press here to book via identification number</string>
    <string name="title_activity_special_reader">Special_reader</string>
    <string name="user_created">User successful created</string>
    <string name="new_bilance">New balance is </string>
    
    <string name="manual">Please select the desired symbol and take your RFID tag to the reader</string>

    <string name="rename">Rename</string>

    <string name="groupmode">Group mode</string>
    <string name="create_group">Create group</string>
    <string name="create_user">Create user</string>

    <string name="comma_new_coffee_billance">, your new coffee balance is</string>
    <string name="comma_new_candy_billance">, your new candy balance is</string>
    <string name="comma_new_metcan_billance">, your new meat can balance is</string>
    <string name="comma_new_beer_billance">, your new beer balance is</string>
    <string name="comma_new_can_billance">, your new can balance is</string>
    <string name="comma_new_misc_billance">, ihr meat/fish balance is</string>
    
    <string name="personalnumber_not_found">Personal number not found!</string>
    <string name="no_personalnumber_number">This is no valid personal number</string>
    <string name="personalnumber_in_use">Your personal number is already in use</string>
    
    <string name="is_correct_name">Is this your correct name?</string>
    <string name="comma_is_correct_name">, is this your correct name?</string>
    <string name="hello">Hello</string>
    
    <string name="export_database">Export database</string>
    <string name="change_coffee_price">Change coffee price</string>
    
    <string name="backup_database">Backup database</string>
    
    <string name="enter_personalnumber">Enter personal number</string>
    
    <string name="enter_float">A float value please?</string>
    
    <string name="candy_billance">  Candy balance:      </string>
	<string name="coffee_billance"> Coffee balance:     </string>
	<string name="met_billance">  Meat can balance:      </string>
	<string name="beer_billance"> Beer balance:     </string>

    <string name="beer_increase">increase beer value</string>
    <string name="beer_decrease">decrease beer value</string>
    <string name="coffee_increase">increase coffee value</string>
    <string name="coffee_decrease">decrease coffee value</string>
    <string name="candy_increase">increase candy value</string>
    <string name="candy_decrease">decrease candy value</string>
    <string name="can_increase">increase can value</string>
    <string name="can_decrease">decrease can value</string>


    <string name="group_booked">Group successfully booked</string>

    <string name="groups">Groups</string>
    <string name="people">People</string>
    <string name="admins">Admins</string>
    <string name="saldo">Saldo</string>

    <string name="vertical_ellipsis">&#8942;</string>
    <string name="thumbnail_options_menu">thumbnail_optionsmenu</string>
    <string name="title_activity_import">Import database</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="import_database_question">Do you want to import these data set into coffeeapp database? All internal data will be deleted</string>
    <string name="all_deleted_you_are_fucked">Shit happens all your data are lost, because you gave me and invalid data set.</string>
    <string name="all_fine">Successful done</string>
    <string name="shit_happens">This is not a valid file.</string>
    <string name="new_admin_code">administration code</string>
    <string name="reenter_new_admin_code">reenter administration code</string>
    <string name="two_field_dont_match">Fields don\'t match please validate your input</string>
    <string name="admincode_set_to_default">Admin code set to default 4711</string>
    <string name="enter_admin_code">The number is no administrator</string>
    <string name="user_personal_number">Personal number</string>
    <string name="user_rfid">RFID</string>
    <string name="user_name">Username</string>
    <string name="user_creation_date">Date of creation</string>
    <string name="coffee">Coffee</string>
    <string name="candy">Candy</string>
    <string name="beer">Beer</string>
    <string name="can">Can</string>
    <string name="misc">Meat and stuff</string>
    <string name="current_ballance">Current ballance</string>
    <string name="time">Time</string>
    <string name="change_userdata">Change userdata</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="apply">Apply</string>

</resources>

