<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_userconfig_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/change_userdata"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_userconfig_username"
        android:layout_width="match_parent"
        android:layout_below="@id/tv_userconfig_title"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_userconfig_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_userconfig_personalnumber"
        android:layout_width="match_parent"
        android:layout_below="@id/til_userconfig_username"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_userconfig_personalnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/user_personal_number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_userconfig_rfid"
        android:layout_width="match_parent"
        android:layout_below="@id/til_userconfig_personalnumber"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_userconfig_rfid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_below="@id/til_userconfig_personalnumber"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/user_rfid"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_userconfig_dateofcreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/til_userconfig_rfid"
        android:textColor="@android:color/black"
        android:text="@string/user_creation_date" />

    <Button
        android:id="@+id/btn_userconfig_apply"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_userconfig_dateofcreation"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/apply" />

</RelativeLayout>